# zero2prod

./: .gitignore  Cargo.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
migrations/: 20210329190819_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
