[package]
name = "zero2prod"
version = "0.1.0"
authors = ["marcus_oa <marcus.official1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.4"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}

# Using table-like toml syntax to avoid
# a super long line!
[dependencies.sqlx]
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
